<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020
  ~ Created by Suszter Dominik on 2020. 12. 4
  ~ Copyright © 2020. RR. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_surgeryes"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_home">
        </item>
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/app_name">
        </item>
        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/app_name">
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/logout">
        </item>

    </group>

</menu>