<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020
  ~ Created by Suszter Dominik on 2020. 12. 13
  ~ Copyright © 2020. RR. All rights reserved.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.Rooms.RoomDetailActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/RoomName"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_Name" />

        <EditText
            android:id="@+id/RoomNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/room_Name"
            android:inputType="textPersonName" />

        <TextView
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capacity" />

        <EditText
            android:id="@+id/editTextRoomCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/capacity"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/AddressTextView"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/RoomZipcodeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/zipcode_Edittext"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/RoomCityEdittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/zipCode_EditText"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <EditText
            android:id="@+id/RoomAddressEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address_EditText"
            android:inputType="textPostalAddress" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Dashboard.Rooms.RoomDetailActivity" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_room_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_save_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>