<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020
  ~ Created by Suszter Dominik on 2020. 12. 5
  ~ Copyright © 2020. RR. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical"
    tools:context=".Section.SectionDetail">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorFormBackground"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/sectionName"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_name"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/section_name"
            android:inputType="text"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="47dp" />

        <TextView
            android:id="@+id/StartText"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/startDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:clickable="true"
            android:editable="false"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/start_date"
            tools:ignore="TextFields"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="107dp" />

        <TextView
            android:id="@+id/EndText"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/endDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:clickable="true"
            android:editable="false"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/end_time"
            android:inputType="none"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="107dp" />

    </LinearLayout>

</RelativeLayout>